--- a/ru/localizeble.strings
+++ b/ru/localizeble.strings
@@ -1,3 +1,7 @@
 "main_page_language" = "English";
+"main_page_change_language" = "изменение языка";
+"alert_change_language_title" = "Сменить язык на";
+"alert_cancel" = "Отмена";
 "en" = "English";
+"uk" = "ложный";
 "ar" = "true";
